--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "dependencies": {
+    "@zeit/next-css": "^0.2.0",
+    "babel-plugin-import": "^1.9.1",
+    "babel-plugin-inline-import": "^3.0.0",
+    "bootstrap": "^4.1.3",
     "next": "^7.0.0-canary.20",
     "react": "^16.5.1",
-    "react-dom": "^16.5.1"
+    "react-dom": "^16.5.1",
+    "reactstrap": "^6.4.0"
   },
   "scripts": {
-  "dev": "next",
-  "build": "next build",
-  "start": "next start"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   }
 }
