--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "dependencies": {
-    "@zeit/next-css": "^0.2.0",
     "babel-plugin-import": "^1.9.1",
     "babel-plugin-inline-import": "^3.0.0",
     "bootstrap": "^4.1.3",
     "next": "^7.0.0-canary.20",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "reactstrap": "^6.4.0"
+    "reactstrap": "^6.4.0",
+    "strapi": "^3.0.0-alpha.14.1.1"
   },
   "scripts": {
     "dev": "next",
