--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "dependencies": {
+    "apollo-client": "^2.4.2",
     "babel-plugin-import": "^1.9.1",
     "babel-plugin-inline-import": "^3.0.0",
     "bootstrap": "^4.1.3",
+    "isomorphic-fetch": "^2.2.1",
     "next": "^7.0.0-canary.20",
+    "next-apollo": "^2.0.0",
     "react": "^16.5.1",
+    "react-apollo": "^2.1.11",
     "react-dom": "^16.5.1",
-    "reactstrap": "^6.4.0"
+    "reactstrap": "^6.4.0",
+    "strapi-sdk-javascript": "^0.3.0"
   },
   "scripts": {
     "dev": "next",
