pages route added, no server side set

--- a/server/api/restaurant/models/Restaurant.settings.json
+++ b/server/api/restaurant/models/Restaurant.settings.json
@@ -24,7 +24,7 @@
       "required": false
     },
     "dishes": {
-      "model": "dish",
+      "collection": "dish",
       "via": "restaurant"
     }
   }
