--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -1,41 +1,22 @@
 {
-    "comment": "Configurations for [js, jsx, json] and Shared configurations",
-
-    "brace_style": "none",
+    "brace_style": "collapse-preserve-inline", 
     "break_chained_methods": false,
-    "comma_first": false,
-    "e4x": true,
-    "end_with_newline": true,
+    "end_with_newline": false,
     "eol": "\n",
     "eval_code": false,
-    "keep_array_indentation": false,
-    "keep_function_indentation": false,
-    "indent_size": 4,
-    "indent_char": " ",
+    "indent_char": "  ",
     "indent_level": 0,
+    "indent_size": 1,
     "indent_with_tabs": true,
     "jslint_happy": false,
-    "max_preserve_newlines": 10,
-    "preserve_newlines": true,
+    "keep_array_indentation": false,
+    "keep_function_indentation": false,
+    "max_preserve_newlines": 4, //<---this
+    "preserve_newlines": true, // <---this too
     "space_after_anon_function": false,
-    "space_before_conditional": false,
-    "space_in_paren": false,
-    "wrap_attributes": "auto",
-    "wrap_attributes_indent_size": 4,
-    "wrap_line_length": 0,
+    "space_before_conditional": true,
     "unescape_strings": false,
-
-
-    "comment": "Configurations for [css] and its pre-processors [sass, scss, less]",
-
-    "newline_between_rules": true,
-    "selector_separator_newline": false,
-
-
-    "comment": "Configurations for [html, xml]",
-
-    "extra_liners": ["head", "body", "/html"],
-    "indent_inner_html": true,
-    "indent_scripts": "normal",
-    "unformatted": ["inline"]
+    "wrap_attributes": "auto",
+    "wrap_attributes_indent_size": 2,
+    "wrap_line_length": 0
 }
