--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-apollo": "^2.1.11",
     "react-dom": "^16.5.1",
     "reactstrap": "^6.4.0",
+    "recompose": "^0.30.0",
     "strapi-sdk-javascript": "^0.3.0"
   },
   "scripts": {
