--- a/server/api/dish/models/Dish.settings.json
+++ b/server/api/dish/models/Dish.settings.json
@@ -1,6 +1,6 @@
 {
   "connection": "default",
-  "collectionName": "",
+  "collectionName": "dish",
   "info": {
     "name": "dish",
     "description": ""
