--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "babel-plugin-import": "^1.9.1",
     "babel-plugin-inline-import": "^3.0.0",
     "bootstrap": "^4.1.3",
+    "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
     "next": "^7.0.0-canary.20",
     "next-apollo": "^2.0.0",
@@ -14,9 +15,12 @@
     "recompose": "^0.30.0",
     "strapi-sdk-javascript": "^0.3.0"
   },
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
+    "scripts": {
+      "dev": "node server.js",
+      "build": "next build",
+      "start": "NODE_ENV=production node server.js"
+    },
+  "devDependencies": {
+    "webpack-cli": "^3.1.1"
   }
 }
