--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.1.3",
     "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
+    "js-cookie": "^2.2.0",
     "next": "^7.0.0-canary.20",
     "next-apollo": "^2.0.0",
     "react": "^16.5.1",
@@ -15,11 +16,11 @@
     "recompose": "^0.30.0",
     "strapi-sdk-javascript": "^0.3.0"
   },
-    "scripts": {
-      "dev": "node server.js",
-      "build": "next build",
-      "start": "NODE_ENV=production node server.js"
-    },
+  "scripts": {
+    "dev": "node server.js",
+    "build": "next build",
+    "start": "NODE_ENV=production node server.js"
+  },
   "devDependencies": {
     "webpack-cli": "^3.1.1"
   }
