--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
+    "jwt-decode": "^2.2.0",
     "next": "^7.0.0-canary.20",
     "next-apollo": "^2.0.0",
     "react": "^16.5.1",
     "react-apollo": "^2.1.11",
+    "react-cookie": "^3.0.4",
     "react-dom": "^16.5.1",
     "reactstrap": "^6.4.0",
     "recompose": "^0.30.0",
