--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "babel-plugin-import": "^1.9.1",
     "babel-plugin-inline-import": "^3.0.0",
     "bootstrap": "^4.1.3",
+    "browser-or-node": "^1.1.0",
     "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
