--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.1.3",
     "browser-or-node": "^1.1.0",
     "express": "^4.16.3",
+    "immutable": "^3.8.2",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
     "jwt-decode": "^2.2.0",
@@ -17,7 +18,8 @@
     "react-dom": "^16.5.1",
     "reactstrap": "^6.4.0",
     "recompose": "^0.30.0",
-    "strapi-sdk-javascript": "^0.3.0"
+    "strapi-sdk-javascript": "^0.3.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "dev": "node server.js",
