react stripe form inputted

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-apollo": "^2.1.11",
     "react-cookie": "^3.0.4",
     "react-dom": "^16.5.1",
+    "react-stripe-elements": "^2.0.1",
     "reactstrap": "^6.4.0",
     "recompose": "^0.30.0",
     "strapi-sdk-javascript": "^0.3.0",
