logged use into layotu header

--- a/server/api/order/models/Order.settings.json
+++ b/server/api/order/models/Order.settings.json
@@ -1,6 +1,6 @@
 {
   "connection": "default",
-  "collectionName": "",
+  "collectionName": "order",
   "info": {
     "name": "order",
     "description": ""
@@ -24,6 +24,10 @@
     "amount": {
       "default": "",
       "type": "float"
+    },
+    "stripe_id": {
+      "default": "",
+      "type": "string"
     }
   }
 }
