--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
     "jwt-decode": "^2.2.0",
-    "next": "^7.0.0-canary.20",
+    "next": "^7.0.2",
     "next-apollo": "^2.0.0",
     "react": "^16.5.1",
     "react-apollo": "^2.1.11",
